# modelisation_bras_robotique

./: .gitignore  CMakeLists.txt  README.md  package.xml
modelisation_bras_robotique/: package.xml
modelisation_bras_robotique/config/: joint_names.yaml
modelisation_bras_robotique/launch/: display.launch.py
modelisation_bras_robotique/urdf/: arm.urdf.xacro  bras_robotique.urdf.xacro  inertials.xacro  materials.xacro
modelisation_bras_robotique_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
modelisation_bras_robotique_moveit_config/config/: bras_robotique.ros2_control.xacro  bras_robotique.srdf  bras_robotique.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  trajectory_execution.yaml
modelisation_bras_robotique_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
modelisation_bras_robotique_moveit_config/rviz/: moveit.rviz
rviz/: view_robot.rviz
urdf/: arm.urdf.xacro  arm_macro.xacro  inertials.xacro
